# controllers/health.go
@@ -8,7 +8,7 @@ type HealthController struct {
 // Get returns the server health status.
 // @Title Health Check
 // @Description Check whether the API server is running.
-// @Success 200 {object} controller.BasicResponse
+// @Success 200 {object} controllers.BasicResponse
 // @router /health [get]
 func (c *HealthController) Get() {
 	c.Success(200, "Server is running", nil)
