# swagger/api/v1/swagger.json
@@ -6,10 +6,6 @@
     "basePath": "/api/v1",
     "paths": null,
     "definitions": {
-        "controller.BasicResponse": {
-            "title": "BasicResponse",
-            "type": "object"
-        },
         "controllers.BasicResponse": {
             "title": "BasicResponse",
             "type": "object",
